--- a/src/config.sass
+++ b/src/config.sass
@@ -7,3 +7,7 @@ $default_font_family: 'sans-serif'
 
 // Default unit (default: px)
 $default_unit: 'px'
+
+// Width at which the screen is considered as a mobile device
+// (default: 750)
+$mobile_screen_width: 750
