--- a/src/plugins/headers.sass
+++ b/src/plugins/headers.sass
@@ -29,4 +29,4 @@ header
 					margin: 0 5px
 
 	.logo
-		background: none
+		background: transparent none 50% 50%/contain no-repeat padding-box border-box scroll
