--- a/src/core/style.sass
+++ b/src/core/style.sass
@@ -39,6 +39,7 @@
 	// Define a heading class.
 	.h#{$i}
 		font: normal normal 400 #{$size}#{$unit}/normal #{config.$default_font_family}
+		margin: 25px 0 15px 0
 
 // Define flexbox classes
 .flex, .i-flex
