--- a/src/assets/fonts.sass
+++ b/src/assets/fonts.sass
@@ -1,3 +1,5 @@
 @charset 'utf-8'
 
-@debug 'Hello, World!'
+@font-face
+	font-family: 'Roboto Regular'
+	src: url('https://cdn.kerig.ee/assets/font/Roboto/Roboto-Regular.ttf')
