--- a/src/config.sass
+++ b/src/config.sass
@@ -2,12 +2,12 @@
 // variables and other properties that other Sass files in this
 // repository rely on.
 
-// Default font family (default: sans-serif)
+// Default font family (default: 'sans-serif')
 $default_font_family: 'sans-serif'
 
-// Default unit (default: px)
+// Default unit (default: 'px')
 $default_unit: 'px'
 
-// Width at which the screen is considered as a mobile device
-// (default: 750)
+// Width at which the screen is considered as a mobile device in
+// pixels (default: 750)
 $mobile_screen_width: 750
