--- a/src/plugins/buttons.sass
+++ b/src/plugins/buttons.sass
@@ -1,3 +1,14 @@
 @charset 'utf-8'
 
-@debug 'Hello, World!'
+.button
+	background-color: #ffffff
+	border: 1px solid #000000
+	cursor: pointer
+	display: inline-block
+	padding: 5px
+
+	.icon
+		margin: 0 10px 0 0
+
+	.text
+		font-size: 12pt
