--- a/src/plugins/footers.sass
+++ b/src/plugins/footers.sass
@@ -1,3 +1,12 @@
 @charset 'utf-8'
 
-@debug 'Hello, World!'
+footer
+	background-color: #dddddd
+	color: #000f
+
+	&.desktop
+		padding: 25px
+
+	.footnote
+		color: #333f
+		font-size: 11pt
