--- a/src/plugins/headers.sass
+++ b/src/plugins/headers.sass
@@ -10,23 +10,25 @@ header
 		position: fixed
 		right: 0
 		top: 0
+		z-index: 9000
 
 		.logo
-			height: 24px
-			width: 24px
+			height: 48px
+			width: 48px
 
 		.nav
-			.btn
+			.button
 				align-items: center
 				display: flex
 				flex-direction: row
 				justify-content: center
+				padding: 5px
 
-				.ico
-					margin: 0 5px
+				.icon
+					margin: 0 10px 0 0
 
-				.txt
-					margin: 0 5px
+				.text
+					font-size: 12pt
 
 	.logo
 		background: transparent none 50% 50%/contain no-repeat padding-box border-box scroll
