--- a/src/themes/scholer.sass
+++ b/src/themes/scholer.sass
@@ -32,10 +32,10 @@ html
 					&:nth-child(even)
 						background-color: #eeef
 
-					.heading, .cell
+					.header, .cell
 						padding: 15px
 
-					.heading
+					.header
 						font-family: 'medium'
 
 			header
