--- a/src/themes/default.sass
+++ b/src/themes/default.sass
@@ -1,3 +1,137 @@
 @charset 'utf-8'
 
-@debug 'Hello, World!'
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Noto+Serif+Display:wght@600&family=Noto+Serif:wght@400;700&display=swap')
+
+#content
+	font-family: 'Noto Serif', serif
+	font-size: 14pt
+	user-select: none
+
+header
+	&.desktop
+		background-color: #ffff
+		box-shadow: 0 0 3px 3px #0003
+		padding: 10px
+
+		.logo
+			height: 50px
+			width: 50px
+
+		.nav
+			.button
+				background-color: #000f
+				border: 2px solid #000f
+				border-radius: 100px
+				color: #ffff
+				padding: 10px
+				transition: background 100ms cubic-bezier(0.25, 0.1, 0.25, 1) 0ms
+
+				&:hover
+					background-color: #ffff
+					color: #000f
+
+@for $i from 1 through 6
+	h#{$i}, .h#{$i}
+		font-family: 'Noto Serif Display', serif
+		font-size: #{(12 - $i) * 3}pt
+		position: relative
+
+		@if $i > 4
+			color: #777f
+
+		@else
+			border-bottom: 1px solid #888f
+
+		&:hover::before
+			opacity: 1
+
+		&::before
+			align-items: center
+			bottom: 0
+			color: #555f
+			content: '§'
+			cursor: pointer
+			display: flex
+			font-size: 18pt
+			justify-content: center
+			left: -15px
+			opacity: 0
+			position: absolute
+			top: 0
+			transition: opacity 15ms cubic-bezier(0.25, 0.1, 0.25, 1) 0ms
+
+a, .a
+	text-decoration: none
+
+	&:hover
+		text-decoration: underline
+
+p, .p
+	margin: 20px 3px
+
+table, .table
+	border-collapse: collapse
+	margin: 10px 3px
+
+	> tr, > .row
+		background-color: #ffff
+
+		&:nth-child(odd)
+			background-color: #eeef
+
+		> th, > td, > .header, > .cell
+			border: 1px solid #dddf
+			padding: 10px
+
+		> th, > .header
+			background-color: #ffff
+			text-align: center
+
+		> td, > .cell
+			vertical-align: middle
+
+.inline-code
+	background-color: #dddf
+	border-radius: 5px
+	display: inline
+	font-family: 'Noto Sans Mono', monospace
+	font-size: 12pt
+	padding: 1px 3px
+	user-select: text
+
+code, .code
+	background-color: #dddf
+	border-radius: 7.5px
+	display: block
+	font-family: 'Noto Sans Mono', monospace
+	font-size: 12pt
+	margin: 10px 3px
+	padding: 15px
+	user-select: text
+
+hr, .hr
+	
+	background-color: #aaaf
+	border-radius: 2px
+	display: block
+	height: 3px
+
+.hero
+	background-color: #eeef
+	border-radius: 10px
+	flex: 1 1 100%
+	margin: 10px
+	padding: 20px
+
+	@for $i from 1 through 6
+		h#{$i}, .h#{$i}
+			font-family: sans-serif
+			margin: 0
+
+			&::before
+				content: none
+
+.avatar
+	border-radius: 25px
+	height: 50px
+	width: 50px
